# better-prompt

./: .gitignore  API_DOCUMENTATION.md  API_SUMMARY.md  PHASE1_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REDUNDANCY_FIX.md  better_auth.py  better_prompt_cli.py  better_prompt_v2.py  formatter.py  main.py  mapping.json  prompt.json  prompt.xml  prompt.yaml  pyproject.toml  refined_prompt.text  requirements.txt  run_api.py  test_api.py  test_template.py
.github/workflows/: publish.yml  test.yml  workflow.yml
better_prompt/: __init__.py
better_prompt/api/: __init__.py  main.py
better_prompt/cli/: __init__.py  main.py
better_prompt/core/: __init__.py
better_prompt/core/classifier/: __init__.py  task_classifier.py
better_prompt/core/format_selector/: __init__.py  format_selector.py
better_prompt/core/llm_gateway/: __init__.py  base.py  dummy_provider.py
better_prompt/core/pipeline/: __init__.py  orchestrator.py
better_prompt/core/plugins/: __init__.py  manifest.py  registry.py
better_prompt/core/refiner/: __init__.py  pipeline.py
docs/: CLI_COMPLETE.md  CLI_GUIDE.md  CLI_QUICK_REF.md  CLI_SUMMARY.md  FAQ.md  WHAT_YOU_CAN_DO.md
examples/: demo.py
plugins/: redirect.py  refiner.py
tests/: test_core.py
